--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -106,7 +106,7 @@
 <p>Tyto n&aacute;stroje aplikuj&iacute; &uacute;pravu na hrany nebo plochy.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Fillet.svg&amp;filetimestamp=20170324053340&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Fillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Fillet.html" title="PartDesign Fillet">Zaoblen&iacute;</a>: zaobluje hrany aktivn&iacute;ho t&#283;lesa.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Chamfer.svg&amp;filetimestamp=20170324053411&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Chamfer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Chamfer.html" title="PartDesign Chamfer">Zkosen&iacute;</a>: zkos&iacute; hrany aktivn&iacute;ho t&#283;lesa.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Chamfer.svg&amp;filetimestamp=20170324053411&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Chamfer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Chamfer.html" title="PartDesign Chamfer">Sra&#382;en&iacute;</a>: sraz&iacute; hrany aktivn&iacute;ho t&#283;lesa.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Draft.svg&amp;filetimestamp=20170324053440&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Draft.html" title="PartDesign Draft">Zkosen&iacute;</a>: aplikuje &uacute;hlov&eacute; zkosen&iacute; na vybran&eacute; plochy aktivn&iacute;ho t&#283;lesa.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Thickness.svg&amp;filetimestamp=20170324055310&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Thickness.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Thickness.html" title="PartDesign Thickness">Thickness</a>: creates a thick shell from the active body and opens selected face.</li></ul>
 <h3><span class="mw-headline" id="Part_Design_Transformation_Features_toolbar">Part Design Transformation Features toolbar</span></h3>
@@ -193,12 +193,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119213107
+Cached time: 20260119213132
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.239 seconds
-Real time usage: 0.952 seconds
+CPU time usage: 0.219 seconds
+Real time usage: 0.422 seconds
 Preprocessor visited node count: 467/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -209,18 +209,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   56.219      1 -total
- 32.77%   18.421      1 Template:Userdocnavi/cs
- 24.84%   13.964      1 Template:PartDesign_Tools_navi/cs
- 18.91%   10.629      2 Template:Navigation_menu_2
- 16.50%    9.278      1 Template:TOCright
-  8.04%    4.518      2 Template:Docnav
-  5.28%    2.968      1 Template:MenuCommand
-  5.03%    2.828      1 Template:Version
-  4.80%    2.698      5 Template:VersionPlus
+100.00%   26.464      1 -total
+ 30.90%    8.177      1 Template:Userdocnavi/cs
+ 24.13%    6.386      1 Template:PartDesign_Tools_navi/cs
+ 17.16%    4.542      2 Template:Navigation_menu_2
+ 10.60%    2.804      2 Template:Docnav
+  8.61%    2.278      1 Template:MenuCommand
+  8.54%    2.260      1 Template:Version
+  7.23%    1.914      1 Template:TOCright
+  6.93%    1.834      5 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119213106 and revision id 1741305. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119213132 and revision id 1741307. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
