--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -108,7 +108,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Fillet.svg&amp;filetimestamp=20170324053340&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Fillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Fillet.html" title="PartDesign Fillet">Zaoblen&iacute;</a>: zaobluje hrany aktivn&iacute;ho t&#283;lesa.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Chamfer.svg&amp;filetimestamp=20170324053411&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Chamfer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Chamfer.html" title="PartDesign Chamfer">Sra&#382;en&iacute;</a>: sraz&iacute; hrany aktivn&iacute;ho t&#283;lesa.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Draft.svg&amp;filetimestamp=20170324053440&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Draft.html" title="PartDesign Draft">Zkosen&iacute;</a>: aplikuje &uacute;hlov&eacute; zkosen&iacute; na vybran&eacute; plochy aktivn&iacute;ho t&#283;lesa.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Thickness.svg&amp;filetimestamp=20170324055310&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Thickness.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Thickness.html" title="PartDesign Thickness">Thickness</a>: creates a thick shell from the active body and opens selected face.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Thickness.svg&amp;filetimestamp=20170324055310&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Thickness.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Thickness.html" title="PartDesign Thickness">Tlou&scaron;&#357;ka</a>: vytvo&#345;&iacute; silnou sko&#345;&aacute;pku z aktivn&iacute;ho t&#283;lesa a otev&#345;e vybranou plochu.</li></ul>
 <h3><span class="mw-headline" id="Part_Design_Transformation_Features_toolbar">Part Design Transformation Features toolbar</span></h3>
 <p>These are tools for transforming existing features.
 </p>
@@ -193,12 +193,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119213132
+Cached time: 20260119213207
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.219 seconds
-Real time usage: 0.422 seconds
+CPU time usage: 0.216 seconds
+Real time usage: 0.416 seconds
 Preprocessor visited node count: 467/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -209,18 +209,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.464      1 -total
- 30.90%    8.177      1 Template:Userdocnavi/cs
- 24.13%    6.386      1 Template:PartDesign_Tools_navi/cs
- 17.16%    4.542      2 Template:Navigation_menu_2
- 10.60%    2.804      2 Template:Docnav
-  8.61%    2.278      1 Template:MenuCommand
-  8.54%    2.260      1 Template:Version
-  7.23%    1.914      1 Template:TOCright
-  6.93%    1.834      5 Template:VersionPlus
+100.00%   36.310      1 -total
+ 30.02%   10.899      1 Template:PartDesign_Tools_navi/cs
+ 20.07%    7.286      1 Template:Userdocnavi/cs
+ 15.23%    5.528      2 Template:Docnav
+ 13.67%    4.964      1 Template:MenuCommand
+ 10.93%    3.968      2 Template:Navigation_menu_2
+  6.65%    2.415      1 Template:TOCright
+  6.46%    2.346      1 Template:Version
+  5.07%    1.841      5 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119213132 and revision id 1741307. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119213207 and revision id 1741309. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
