--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -13,7 +13,7 @@
 <li><a href="../ro/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench/Atelierul de PartDesign (8% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../fi/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench (1% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="../sv/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench (1% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench/bg (0% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082; PartDesign (63% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench (1% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -109,7 +109,9 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Chamfer.svg&amp;filetimestamp=20170324053411&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Chamfer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Chamfer.html" title="PartDesign Chamfer">Sra&#382;en&iacute;</a>: sraz&iacute; hrany aktivn&iacute;ho t&#283;lesa.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Draft.svg&amp;filetimestamp=20170324053440&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Draft.html" title="PartDesign Draft">Zkosen&iacute;</a>: aplikuje &uacute;hlov&eacute; zkosen&iacute; na vybran&eacute; plochy aktivn&iacute;ho t&#283;lesa.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Thickness.svg&amp;filetimestamp=20170324055310&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Thickness.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Thickness.html" title="PartDesign Thickness">Tlou&scaron;&#357;ka</a>: vytvo&#345;&iacute; silnou sko&#345;&aacute;pku z aktivn&iacute;ho t&#283;lesa a otev&#345;e vybranou plochu.</li></ul>
-<h3><span class="mw-headline" id="Part_Design_Transformation_Features_toolbar">Part Design Transformation Features toolbar</span></h3>
+<p><span id="Part_Design_Transformation_Features_toolbar"></span>
+</p>
+<h3><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_Funkc.C3.AD_transformace_n.C3.A1vrhu_d.C3.ADl.C5.AF"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_Funkc&iacute;_transformace_n&aacute;vrhu_d&iacute;l&#367;">N&aacute;strojov&aacute; li&scaron;ta Funkc&iacute; transformace n&aacute;vrhu d&iacute;l&#367;</span></h3>
 <p>These are tools for transforming existing features.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Mirrored.svg&amp;filetimestamp=20170324053615&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Mirrored.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">Mirror</a>: mirrors one or more features.</li></ul>
@@ -193,34 +195,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119213207
+Cached time: 20260119213245
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.216 seconds
-Real time usage: 0.416 seconds
-Preprocessor visited node count: 467/1000000
+CPU time usage: 0.240 seconds
+Real time usage: 0.647 seconds
+Preprocessor visited node count: 468/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4424/5000000 bytes
+Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.310      1 -total
- 30.02%   10.899      1 Template:PartDesign_Tools_navi/cs
- 20.07%    7.286      1 Template:Userdocnavi/cs
- 15.23%    5.528      2 Template:Docnav
- 13.67%    4.964      1 Template:MenuCommand
- 10.93%    3.968      2 Template:Navigation_menu_2
-  6.65%    2.415      1 Template:TOCright
-  6.46%    2.346      1 Template:Version
-  5.07%    1.841      5 Template:VersionPlus
+100.00%   35.258      1 -total
+ 31.67%   11.167      1 Template:Userdocnavi/cs
+ 29.20%   10.295      1 Template:PartDesign_Tools_navi/cs
+ 12.22%    4.307      2 Template:Navigation_menu_2
+ 10.58%    3.731      2 Template:Docnav
+  6.78%    2.391      1 Template:Version
+  6.71%    2.364      5 Template:VersionPlus
+  6.09%    2.147      1 Template:TOCright
+  4.56%    1.609      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119213207 and revision id 1741309. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119213244 and revision id 1741311. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
