--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -131,10 +131,7 @@
 <p><span id="Context_menu"></span>
 </p>
 <h2><span id="Kontextov.C3.A9_menu"></span><span class="mw-headline" id="Kontextov&eacute;_menu">Kontextov&eacute; menu</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Potla&#269;it]]: za&scaron;krt&aacute;vac&iacute; pol&iacute;&#269;ko pro deaktivaci konkr&eacute;tn&iacute;ho prvku bez jeho odstran&#283;n&iacute;. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
-</p>
-</div>
+<ul><li><a href="../index.php?title=PartDesign_Suppressed&amp;action=edit&amp;redlink=1.html" class="new" title="PartDesign Suppressed (page does not exist)">Potla&#269;it</a>: za&scaron;krt&aacute;vac&iacute; pol&iacute;&#269;ko pro deaktivaci konkr&eacute;tn&iacute;ho prvku bez jeho odstran&#283;n&iacute;. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MoveTip.svg&amp;filetimestamp=20240405093058&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MoveTip.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MoveTip.html" title="PartDesign MoveTip">Set Tip</a>: redefines the tip, which is the feature exposed outside of the Body.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MoveFeature.svg&amp;filetimestamp=20240405093125&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MoveFeature.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MoveFeature.html" title="PartDesign MoveFeature">Move Object To&hellip;</a>: moves the selected sketch, datum geometry or feature to another Body.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MoveFeatureInTree.svg&amp;filetimestamp=20210122023739&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MoveFeatureInTree.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MoveFeatureInTree.html" title="PartDesign MoveFeatureInTree">Move Feature After&hellip;</a>: allows reordering of the Body tree by moving the selected sketch, datum geometry or feature to another position in the list of features.</li></ul>
@@ -202,12 +199,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119214704
+Cached time: 20260119214822
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.244 seconds
-Real time usage: 0.745 seconds
+CPU time usage: 0.188 seconds
+Real time usage: 0.260 seconds
 Preprocessor visited node count: 470/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -218,18 +215,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.552      1 -total
- 45.90%   19.074      2 Template:Docnav
- 14.46%    6.007      1 Template:Userdocnavi/cs
- 10.26%    4.265      1 Template:PartDesign_Tools_navi/cs
- 10.09%    4.192      5 Template:VersionPlus
-  8.00%    3.322      2 Template:Navigation_menu_2
-  7.51%    3.122      1 Template:TOCright
-  4.92%    2.045      1 Template:Version
-  4.67%    1.939      1 Template:MenuCommand
+100.00%   14.941      1 -total
+ 31.18%    4.658      1 Template:Userdocnavi/cs
+ 25.24%    3.771      1 Template:PartDesign_Tools_navi/cs
+ 19.99%    2.987      2 Template:Navigation_menu_2
+ 13.70%    2.047      2 Template:Docnav
+  6.63%    0.990      5 Template:VersionPlus
+  6.26%    0.935      1 Template:MenuCommand
+  6.22%    0.930      1 Template:Version
+  6.08%    0.908      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119214703 and revision id 1741341. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119214821 and revision id 1741343. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
