--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -135,7 +135,9 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MoveTip.svg&amp;filetimestamp=20240405093058&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MoveTip.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MoveTip.html" title="PartDesign MoveTip">Nastavit Tip</a>: p&#345;edefinuje tip, co&#382; je prvek vystaven&yacute; mimo t&#283;lo.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MoveFeature.svg&amp;filetimestamp=20240405093125&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MoveFeature.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MoveFeature.html" title="PartDesign MoveFeature">P&#345;esunout objekt do&hellip;</a>: p&#345;esune vybran&yacute; n&aacute;&#269;rt, referen&#269;n&iacute; geometrii nebo prvek do jin&eacute;ho t&#283;lesa.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MoveFeatureInTree.svg&amp;filetimestamp=20210122023739&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MoveFeatureInTree.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MoveFeatureInTree.html" title="PartDesign MoveFeatureInTree">P&#345;esunout prvek za&hellip;</a>: umo&#382;&#328;uje zm&#283;nit po&#345;ad&iacute; stromu t&#283;lesa p&#345;esunut&iacute;m vybran&eacute;ho n&aacute;&#269;rtu, referen&#269;n&iacute; geometrie nebo prvku na jinou pozici v seznamu prvk&#367;.</li></ul>
-<h3><span class="mw-headline" id="Obsolete_tools">Obsolete tools</span></h3>
+<p><span id="Obsolete_tools"></span>
+</p>
+<h3><span id="Zastaral.C3.A9_n.C3.A1stroje"></span><span class="mw-headline" id="Zastaral&eacute;_n&aacute;stroje">Zastaral&eacute; n&aacute;stroje</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Plane.svg&amp;filetimestamp=20170324054826&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Plane.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Plane.html" title="PartDesign Plane">Create a datum plane</a>: creates a datum plane in the active body. This tool is not available in <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Line.svg&amp;filetimestamp=20170324054744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Line.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Line.html" title="PartDesign Line">Create a datum line</a>: creates a datum line in the active body. This tool is not available in <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Point.svg&amp;filetimestamp=20240405093024&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Point.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Point.html" title="PartDesign Point">Create a datum point</a>: creates a datum point in the active body. This tool is not available in <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
@@ -199,13 +201,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119215535
+Cached time: 20260119215542
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.244 seconds
-Real time usage: 0.413 seconds
-Preprocessor visited node count: 470/1000000
+CPU time usage: 0.215 seconds
+Real time usage: 0.343 seconds
+Preprocessor visited node count: 471/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
@@ -215,18 +217,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.505      1 -total
- 18.71%    7.016      1 Template:Userdocnavi/cs
- 16.79%    6.298      1 Template:PartDesign_Tools_navi/cs
- 16.57%    6.216      2 Template:Docnav
- 11.27%    4.225      5 Template:VersionPlus
- 10.39%    3.897      2 Template:Navigation_menu_2
- 10.30%    3.863      1 Template:MenuCommand
- 10.23%    3.838      1 Template:Version
-  8.36%    3.137      1 Template:TOCright
+100.00%   25.672      1 -total
+ 31.84%    8.175      1 Template:Userdocnavi/cs
+ 28.74%    7.378      1 Template:PartDesign_Tools_navi/cs
+ 20.29%    5.209      2 Template:Navigation_menu_2
+ 10.62%    2.726      2 Template:Docnav
+  6.42%    1.648      1 Template:Version
+  5.99%    1.537      5 Template:VersionPlus
+  5.94%    1.524      1 Template:MenuCommand
+  5.36%    1.376      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119215535 and revision id 1741349. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119215542 and revision id 1741351. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
